@@ -1,4 +1,4 @@
-#serial 38
+#serial 39
 
 dnl We use gl_ for non Autoconf macros.
 m4_pattern_forbid([^gl_[ABCDEFGHIJKLMNOPQRSTUVXYZ]])dnl
@@ -13,8 +13,8 @@ AC_DEFUN([gl_PREREQ],
 
   AC_REQUIRE([AM_FUNC_GETLINE])
   AC_REQUIRE([AM_STDBOOL_H])
-  AC_REQUIRE([UTILS_FUNC_MKDIR_TRAILING_SLASH])
-  AC_REQUIRE([UTILS_FUNC_MKSTEMP])
+  AC_REQUIRE([gl_FUNC_MKDIR_TRAILING_SLASH])
+  AC_REQUIRE([gl_FUNC_MKSTEMP])
   AC_REQUIRE([gl_BACKUPFILE])
   AC_REQUIRE([gl_CANON_HOST])
   AC_REQUIRE([gl_CLOSEOUT])
